--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.0.1",
     "@types/node": "20.8.0",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
