--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bitcoin-address-validation": "^2.2.3",
     "next": "13.5.6",
     "rc-slider": "^10.3.1",
     "react": "18.2.0",
