--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "bitcoin-address-validation": "^2.2.3",
     "next": "13.5.6",
     "rc-slider": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.1.3",
     "typescript": "5.2.2"
   },
   "devDependencies": {
