--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "bitcoin-address-validation": "^2.2.3",
     "next": "13.5.6",
+    "next-redux-wrapper": "^8.1.0",
     "rc-slider": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
