--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rc-slider": "^10.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-qr-code": "^2.0.12",
     "react-redux": "^8.1.3",
     "typescript": "5.2.2"
   },
